# KernelHook

./: .gitignore  CMakeLists.txt  README.md  README_zh.md
.github/workflows/: avd-tests.yml
docs/en/: build-modes.md  khtools.md  kmod-loader.md  path1-quickstart.md  path2-bootpatch.md
docs/zh/: build-modes.md  khtools.md  kmod-loader.md  path1-quickstart.md  path2-bootpatch.md
include/kernelhook/: kh_blob_table.h
kh_strategies/: CMakeLists.txt
kh_strategies/include/kh_strategies/: finalize.h  strategies.h
kh_strategies/src/: cli.c  config.c  elf_helpers.h  finalize_kcfi.c  finalize_layout.c  finalize_misc.c  finalize_printk.c  finalize_vermagic.c  finalize_versions.c  probe_binary.c  probe_disasm.c  probe_image.c  probe_loaded.c  probe_ondisk.c  probe_procfs.c  variant_name.c
khctl/: CMakeLists.txt
khctl/src/: cmd_dispatch.h  cmd_log.c  cmd_status.c  cmd_version.c  main.c
khimg/: .gitignore  Makefile  khimg.lds
khimg/include/: log.h  setup.h
khimg/src/: baselib.c  cache.S  kh_lkm_hook.S  kh_lkm_load.c  kh_load.c  map.c  map1.S  paging_init.S  setup.c  setup1.S  start.c  tlsf.c
khinsmod/: CMakeLists.txt
khinsmod/src/: main.c
khtools/: CMakeLists.txt
khtools/fixtures/ksu_lkm/: .gitignore  MANIFEST.txt  fetch.sh
khtools/src/: cmd_dispatch.h  cmd_dump_syms.c  cmd_extract.c  cmd_finalize.c  cmd_list.c  cmd_patch.c  cmd_patch_image.c  cmd_probe.c  cmd_verify.c  common.c  common.h  embed_blob.c  embed_blob.h  file_io.c  file_io.h  finalize_glue.c  finalize_glue.h  graft.c  graft.h  image_inject.c  image_inject.h  insn.c  insn.h  kallsym.c  kallsym.h  main.c  order.c  order.h  probe_image.c  probe_image.h  sha256.c  sha256.h
khtools/tests/: test_dump_syms_pixel31.sh  test_extract_smoke.sh  test_finalize_golden.sh  test_finalize_smoke.sh  test_image_inject.c  test_kallsym_pixel35.c  test_patch_smoke.sh  test_probe_pixel31.c  test_verify_smoke.sh
kmod/: Kbuild  Makefile  PATH1_KSU_SURFACE_BLOCKER.md  PATH1_KSU_SURFACE_HISTORY.md
kmod/consumers/apd/: apd_main.c
kmod/consumers/khm/: khm_main.c
kmod/consumers/supercall/: sc_main.c
kmod/include/kernelhook/: kh_call_init_module.h  kh_consumer.h  kh_finalize_kernel.h  kh_ksu_blob.h  kh_ksu_load.h
kmod/lds/: kmod.lds
kmod/loader/: BLOCKER.md  CMakeLists.txt  README.md  kh_loader.h  kh_loader_insn.c  kh_loader_relo.c
kmod/loader/tests/: test_loader.c
kmod/shim/: shim.h
kmod/src/: fat_main.c  kh_call_init_module.c  kh_finalize_kernel.c  ksu_load.c  main.c
scripts/: extract_avd_crcs.py  matrix_acd.sh  matrix_acd_results.md  test_avd_path1.sh  test_avd_path2.sh
scripts/lib/: avd_console.sh
tools/kmod_loader/: Makefile  kmod_loader.c
